--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "clsx": "^2.1.1",
-    "axios": "^1.7.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4",
-    "@vitejs/plugin-react": "^4.3.1",
     "vite": "^5.4.1"
   }
 }
